removes the old patient detail template as this is no longer used

--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -1,100 +1,5 @@
-{% load panels %}
-{% load forms %}
-{% load links %}
-<div ng-show="patient == null" class="content-offset">
-  <h1 class="text-center content-offset">
-    Patient not found
-  </h1>
-  <p class="lead text-center content-offset">
-    We're sorry but we couldn't find the patient you're looking for.
-    <br />
-    Perhaps try searching for them instead?
-  </p>
-</div>
+{% comment %}
+THIS TEMPLATE IS NOT USED AND IS INCLUDED BECAUSE IT IS REQUIRED BY THE OPAL
+ANGULAR IMPLEMENTATION
+{% endcomment %}
 
-<div class="content-offset {% block container_classes %}{% endblock %}"
-     ng-hide="patient == null">
-  <div class="panel panel-primary panel-container patient-detail {% block panel_classes %}{% endblock %}">
-    <!-- Default panel contents -->
-    <div class="panel-heading patient-detail-heading">
-      <h1>
-        {% block heading %}{% icon 'fa-user' %}[[ patient.demographics[0].first_name ]] [[ patient.demographics[0].surname ]]{% endblock %}
-        <small>
-          {% block subheading %}
-            [[ patient.demographics[0].date_of_birth | displayDate ]]
-            ([[ patient.demographics[0].date_of_birth | age ]])
-          {% endblock %}
-        </small>
-      </h1>
-      <div class="row"> <!-- Start demographics banner -->
-        <div class="col-md-4">
-          <p>
-            NHS Number: <b>[[ patient.demographics[0].nhs_number ]]</b>
-          </p>
-        </div>
-        <div class="col-md-3">
-          <p>
-            Sex: <b>[[ patient.demographics[0].sex ]]</b>
-          </p>
-        </div>
-        <div class="col-md-1 col-md-offset-4">
-          <i class="fa fa-pencil edit pull-right"
-             ng-click="patient.recordEditor.editItem('demographics', 0)"></i>
-        </div>
-      </div> <!-- end demographics banner -->
-    </div>
-
-    <div class="panel-body {% block panel_body_classes %}{% endblock %}">
-
-      <!-- Begin Current Episode Display -->
-      <div class="row content-offset-25">
-        {% block content %}
-          <div class="col-md-12">
-            {% comment %}
-              {% for episode_category in episode_categories %}
-                {% if episode_category.detail_template %}
-                  <div class="row" ng-show="view == null && episode.category_name == '{{ episode_category.display_name }}'">
-                    {% include episode_category.detail_template %}
-                  </div>
-                {% endif %}
-              {% endfor %}
-            {% endcomment %}
-
-            <div class="row">
-              <button class="btn btn-primary disabled pull-right">
-                Open FP17
-              </button>
-              <button class="btn btn-primary pull-right" style="margin-right: 10px;">
-                Open FP17O
-              </button>
-            </div>
-
-            <div class="row content-offset-20">
-              <div class="col-md-12">
-                <table class="table">
-                    <tr ng-repeat="e in patient.episodes">
-                      <td>Episode type</td>
-                      <td>[[ e.stage ]]</td>
-                      <td>Start date ? </td>
-                      <td></td>
-                      <td><a href="#" class="btn btn-small btn-primary">Edit &nbsp;</a></td>
-                    </tr>
-                  </table>
-              </div>
-            </div>
-
-            {% for detail in detail_views %}
-              <div class="row" ng-show="view == '{{ detail.get_slug }}'">
-                {% include detail.template %}
-              </div>
-            {% endfor %}
-            {% block viewtemplates %}{% endblock %}
-          </div>
-      </div> <!-- Ends Current Episode Display -->
-
-
-
-{% endblock content %}
-    </div> <!-- Panel body -->
-  </div>   <!-- Panel -->
-</div>     <!-- Container -->
