fix the bootstrap radio buttons to work on mobile

--- a/odonto/templates/_helpers/btn_radio.html
+++ b/odonto/templates/_helpers/btn_radio.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group radio-buttons">
   <div class="btn-group">
     <div class="row">
       <div class="col-md-12">
