--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -7,6 +7,8 @@ $black_coral: #595F72;
 $gunmetal: #21232A;
 $bone: #DDD8C4;
 $error_red: #DE3C4B;
+$screen-sm-min: 768px;
+
 
 // Color and typography
 .cambridge_blue {
@@ -518,5 +520,16 @@ table.patient-list {
     .patient-right{
         border-right: 2px solid #ddd;
         text-align: right;
+    }
+}
+
+.radio-buttons{
+    @media(max-width: $screen-sm-min){
+        .btn-group{
+            width: 100%;
+        }
+        .btn-radio-group{
+            display: block;
+        }
     }
 }
