--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -514,6 +514,8 @@ table.patient-list {
 }
 
 .extraction-chart{
+    padding-left: 20px;
+
     .upper{
         border-bottom: 2px solid #ddd;
     }
