Removes the label from treatment category. Its a model called Treatment Category so it doesn't need a lable that also states Treatment Category

--- a/odonto/templates/forms/fp17_treatment_category_form.html
+++ b/odonto/templates/forms/fp17_treatment_category_form.html
@@ -2,6 +2,6 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-3">
-    {% select field="Fp17TreatmentCategory.treatment_category" style="vertical"%}
+    {% select field="Fp17TreatmentCategory.treatment_category" style="vertical" label="" %}
   </div>
 </div>
