Adds a select tag that supports the error text validation

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -541,4 +541,8 @@ table.patient-list {
     display: block;
   }
 }
+
+.errored-state select {
+  background-color: #fcc;
+}
 /*# sourceMappingURL=odonto.css.map */
