Change select boxes to the new odonto_select box

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -29,7 +29,7 @@
     {% charfield field="Demographics.phone_number" style="vertical" element_name="tel" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% select field="Demographics.ethnicity" required=True style="vertical" %}
+    {% odonto_select field="Demographics.ethnicity" required=True style="vertical" %}
   </div>
 </div>
 <div class="row">
