--- a/odonto/templates/forms/fp17_treatment_category_form.html
+++ b/odonto/templates/forms/fp17_treatment_category_form.html
@@ -1,7 +1,6 @@
-{% load forms %}
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-3">
-    {% select field="Fp17TreatmentCategory.treatment_category" style="vertical" label="" %}
+    {% odonto_select field="Fp17TreatmentCategory.treatment_category" style="vertical" label="" %}
   </div>
 </div>
