--- a/odontotheme/templates/_helpers/odonto_select.html
+++ b/odontotheme/templates/_helpers/odonto_select.html
@@ -6,7 +6,7 @@
     </label>
     {% endif %}
     <div class="{% ifequal style "horizontal" %}col-sm-8{% endifequal %}"
-         ng-class='{"has-error": {{ formname }}.$submitted && {{ formname }}[{{ element_name }}].$error.required}'>
+         ng-class='{"errored-state": {{ formname }}.$submitted && {{ formname }}[{{ element_name }}].$error.required}'>
       <select {% if autofocus %}autofocus {% endif %}name="[[ {{ element_name }} ]]" {% if required %}required{% endif %} class="form-control" ng-model="{{ model }}" {% if change %} ng-change="{{ change }}" {% endif %} {% if disabled %}ng-disabled="{{ disabled }}" {% endif %} {% for d in directives %}{{ d }} {% endfor %}>
         <option value="" selected>---------</option>
         <option ng-repeat="i in {{ lookuplist }} track by $index">[[ i ]]</option>
