--- a/odonto/templates/forms/orthodontic_treatment_form.html
+++ b/odonto/templates/forms/orthodontic_treatment_form.html
@@ -1,21 +1,12 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row content-offset-20">
-  <div class="col-md-3">
-    {% btn_checkbox field="OrthodonticTreatment.patient_failed_to_return" %}
-  </div>
-  <div class="col-md-3 col-md-offset-1">
-    {% btn_checkbox field="OrthodonticTreatment.patient_requested_stop" %}
-  </div>
-  <div class="col-md-3 col-md-offset-1">
-    {% btn_checkbox field="OrthodonticTreatment.treatment_discontinued" %}
+  <div class="col-md-12">
+    {% btn_radio field="OrthodonticTreatment.resolution" %}
   </div>
 </div>
 <div class="row content-offset-20">
-  <div class="col-md-3">
-    {% btn_checkbox field="OrthodonticTreatment.treatment_completed" %}
-  </div>
-  <div class="col-md-3 col-md-offset-1">
+  <div class="col-md-3 ">
     {% btn_checkbox field="OrthodonticTreatment.par_scores_calculated" %}
   </div>
 </div>
