Explicitly declare that the resolution field is not required, null fields are not coming through from the model at present

--- a/odonto/templates/forms/orthodontic_treatment_form.html
+++ b/odonto/templates/forms/orthodontic_treatment_form.html
@@ -2,7 +2,7 @@
 {% load odonto_forms %}
 <div class="row content-offset-20">
   <div class="col-md-12">
-    {% btn_radio field="OrthodonticTreatment.resolution" %}
+    {% btn_radio field="OrthodonticTreatment.resolution" required=False %}
   </div>
 </div>
 <div class="row content-offset-20">
