--- a/odonto/templates/records/orthodontic_treatment.html
+++ b/odonto/templates/records/orthodontic_treatment.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-6">
     <table class="table table-striped">
-      {% table_row_field_display "OrthodonticTreatment.resolution" %}
+      {% table_row_field_display "OrthodonticTreatment.completion_type" %}
       {% table_row_field_display "OrthodonticTreatment.par_scores_calculated" %}
       {% table_row_field_display "OrthodonticTreatment.iotn" %}
       {% table_row_field_display "OrthodonticTreatment.iotn_not_applicable" %}
