Makes bootstrap check boxes uncheckable. As part of this it means we are saving null to a server so this changes the fields which were defaulting '' to accept null values

--- a/odonto/templates/_helpers/btn_radio.html
+++ b/odonto/templates/_helpers/btn_radio.html
@@ -12,6 +12,7 @@
         <label class="btn btn-default btn-radio-group"
               ng-model="{{ model }}"
               uib-btn-radio="'[[ i ]]'"
+              uncheckable='true'
               name="[[ {{ element_name }} ]]"
               {% if required %}required {% endif %}
               ng-repeat="i in {{ lookuplist }} track by $index">
