--- a/odonto/templates/forms/orthodontic_treatment_form.html
+++ b/odonto/templates/forms/orthodontic_treatment_form.html
@@ -25,7 +25,7 @@
   <div class="col-md-3">
     {% btn_checkbox field="OrthodonticTreatment.repair" %}
   </div>
-  <div class="col-md-3">
+  <div class="col-md-3 col-md-offset-1">
     {% btn_checkbox field="OrthodonticTreatment.replacement" %}
   </div>
 </div>
