--- a/odonto/templates/forms/orthodontic_treatment_form.html
+++ b/odonto/templates/forms/orthodontic_treatment_form.html
@@ -6,23 +6,18 @@
   </div>
 </div>
 <div class="row content-offset-20">
-  <div class="col-md-3 ">
+  <div class="col-md-4">
+    {% btn_radio field="OrthodonticTreatment.iotn" required=False %}
+  </div>
+  <div class="col-md-3">
+    {% charfield field="OrthodonticTreatment.aesthetic_component" %}
+  </div>
+</div>
+<div class="row content-offset-20">
+  <div class="col-md-3">
     {% btn_checkbox field="OrthodonticTreatment.par_scores_calculated" %}
   </div>
-</div>
-<div class="row content-offset-20">
-  <div class="col-md-3">
-    {% number field="OrthodonticTreatment.iotn" min=1 max=5 %}
-  </div>
   <div class="col-md-3 col-md-offset-1">
-    {% btn_checkbox field="OrthodonticTreatment.iotn_not_applicable" %}
-  </div>
-  <div class="col-md-3 col-md-offset-1">
-    {% number field="OrthodonticTreatment.aesthetic_component" min=1 max=10 %}
-  </div>
-</div>
-<div class="row content-offset-20">
-  <div class="col-md-3">
     {% btn_checkbox field="OrthodonticTreatment.repair" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
