Aesthetic component is a 1-10 integer so make sure the form constrains us accordingly

--- a/odonto/templates/forms/orthodontic_assessment_form.html
+++ b/odonto/templates/forms/orthodontic_assessment_form.html
@@ -10,7 +10,7 @@
     {% btn_radio field="OrthodonticAssessment.iotn" required=False %}
   </div>
   <div class="col-md-3">
-    {% charfield field="OrthodonticAssessment.aesthetic_component" %}
+    {% number field="OrthodonticAssessment.aesthetic_component" min=1 max=10 %}
   </div>
 </div>
 <div class="row content-offset-20">
