--- a/odonto/templates/forms/orthodontic_treatment_form.html
+++ b/odonto/templates/forms/orthodontic_treatment_form.html
@@ -10,7 +10,7 @@
     {% btn_radio field="OrthodonticTreatment.iotn" required=False %}
   </div>
   <div class="col-md-3">
-    {% charfield field="OrthodonticTreatment.aesthetic_component" %}
+    {% number field="OrthodonticTreatment.aesthetic_component" min=1 max=10 %}
   </div>
 </div>
 <div class="row content-offset-20">
