Change the height of the bootstrap button radio groups to be aligned with the text inputs

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -61,7 +61,7 @@ label {
 .btn.btn-radio-group {
   font-size: 18px;
   line-height: 24px;
-  padding: 18px;
+  padding: 12px 18px;
 }
 
 .btn.btn-checkbox {
