--- a/odonto/templates/pathway/templates/pathway_base.html
+++ b/odonto/templates/pathway/templates/pathway_base.html
@@ -20,7 +20,7 @@
         <strong class="help-block">Please fix the above errors</strong>
       </div>
 
-      <div class="pathway-save-button">
+      <div class="pathway-save-button content-offset-below-150">
           <button
           class="btn btn-lg btn-primary btn-save"
           ng-click="(!pathway.errors && form.$valid) && pathway.finish(editing)"
