--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -272,7 +272,10 @@ label{
     display: none;
 }
 .content-offset {
-    margin-top: 100px
+    margin-top: 100px;
+}
+.content-offset-below-150{
+    margin-bottom: 150px;
 }
 .pathway-offset {
     margin-top: 80px;
