Adds a field to signal if the treatment is incomplete

--- a/odonto/templates/records/fp17_incomplete_treatment.html
+++ b/odonto/templates/records/fp17_incomplete_treatment.html
@@ -1,5 +1,13 @@
 <div class="row">
   <div class="col-md-3">
+    Incomplete Treatment
+  </div>
+  <div class="col-md-9">
+    <b>[[ item.incomplete_treatment ]]</b>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-3">
     Date of acceptance:
   </div>
   <div class="col-md-9">
