--- a/odonto/templates/forms/fp17_incomplete_treatment_form.html
+++ b/odonto/templates/forms/fp17_incomplete_treatment_form.html
@@ -1,6 +1,11 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row">
+  <div class="col-md-6">
+    {% btn_radio field="Fp17IncompleteTreatment.incomplete_treatment" required=True %}
+  </div>
+</div>
+<div class="row">
   <div class="col-md-5">
     {% odonto_datepicker field="Fp17IncompleteTreatment.date_of_acceptance" style="vertical" required=True %}
   </div>
