Incomplete treatment should not be required

--- a/odonto/templates/forms/fp17_incomplete_treatment_form.html
+++ b/odonto/templates/forms/fp17_incomplete_treatment_form.html
@@ -2,7 +2,7 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-6">
-    {% btn_radio field="Fp17IncompleteTreatment.incomplete_treatment" required=True %}
+    {% btn_radio field="Fp17IncompleteTreatment.incomplete_treatment" %}
   </div>
 </div>
 <div class="row">
