--- a/odonto/templates/forms/fp17_dental_care_provider_form.html
+++ b/odonto/templates/forms/fp17_dental_care_provider_form.html
@@ -1,7 +1,7 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-5">
-    {% odonto_select field="Fp17DentalCareProvider.performer" style="vertical" lookuplist="metadata.performer.performer_list" %}
+    {% odonto_select field="Fp17DentalCareProvider.performer" required=True style="vertical" lookuplist="metadata.performer.performer_list" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
     {% odonto_select field="Fp17DentalCareProvider.provider_location_number" style="vertical" %}
