removes an errant apostraphe from the postcode regex that was stopping the unable to find patient form rendering

--- a/plugins/add_patient_step/templates/add_patient/pathway/partials/unable_to_find_patient.html
+++ b/plugins/add_patient_step/templates/add_patient/pathway/partials/unable_to_find_patient.html
@@ -58,7 +58,7 @@
           </div>
           <div class="row">
             <div class="col-md-5">
-              {% charfield field="Demographics.post_code" disabled="editing.demographics.protected" maxlength="8" pattern='/^[A-Z0-9 ]{1,8}$'/' label="Post code" pattern_error="Letters and numbers only" %}
+              {% charfield field="Demographics.post_code" disabled="editing.demographics.protected" maxlength="8" pattern='/^[a-zA-Z\d ]+$/' label="Post code" pattern_error="Letters and numbers only" %}
             </div>
           </div>
           <div class="row">
