Adds a stats link to the nav bar

--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -32,6 +32,11 @@
                 </a>
               </li>
             {% endif %}
+            <li {% if request.resolver_match.url_name == "odonto-stats" %}class="active"{% endif %}>
+              <a href="{% url 'odonto-stats' %}">
+                Stats
+              </a>
+            </li>
           </ul>
 
 
