Change contact phone number to mobile phone and add the option for patient declined

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -50,6 +50,14 @@ label {
   font-weight: normal;
 }
 
+.with-decline {
+  margin-bottom: 10px;
+}
+
+.with-decline .form-group {
+  margin-bottom: 5px;
+}
+
 .help-block {
   color: #DE3C4B;
 }
