--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -62,6 +62,13 @@ label{
   font-weight: normal;
 }
 
+.with-decline{
+    .form-group{
+        margin-bottom: 5px;
+    }
+    margin-bottom: 10px;
+}
+
 .help-block {
     color: $error_red;
 }
