remove element name from the phone number declined checkbox

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -36,7 +36,7 @@
 <div class="row">
   <div class="col-md-5 with-decline">
     {% charfield field="Demographics.phone_number" style="vertical" element_name="tel" disabled="editing.demographics.patient_declined_phone" %}
-    {% btn_checkbox field="Demographics.patient_declined_phone" style="vertical" element_name="tel" change="editing.demographics.phone_number=''" %}
+    {% btn_checkbox field="Demographics.patient_declined_phone" style="vertical" change="editing.demographics.phone_number=''" %}
   </div>
 </div>
 
