Adds the proposed field to the othodontic dataset and displays it in the summaries

--- a/odonto/templates/forms/orthodontic_data_set_form.html
+++ b/odonto/templates/forms/orthodontic_data_set_form.html
@@ -2,6 +2,11 @@
 {% load odonto_forms %}
 <div class="row content-offset-20">
   <div class="col-md-3">
+    {% btn_checkbox field="OrthodonticDataSet.proposed" %}
+  </div>
+</div>
+<div class="row content-offset-20">
+  <div class="col-md-3">
     {% input field="OrthodonticDataSet.radiograph" style="vertical" %}
   </div>
 </div>
