adds the with decline argument to the email field

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -38,7 +38,7 @@
     {% charfield field="Demographics.phone_number" style="vertical" element_name="tel" disabled="editing.demographics.patient_declined_phone" %}
     {% btn_checkbox field="Demographics.patient_declined_phone" style="vertical" change="editing.demographics.phone_number=''" %}
   </div>
-  <div class="col-md-5 col-md-offset-1">
+  <div class="col-md-5 col-md-offset-1 with-decline">
     {% charfield field="Demographics.email" disabled="editing.demographics.patient_declined_email" %}
     {% btn_checkbox field="Demographics.patient_declined_email" change="editing.demographics.email=''" %}
   </div>
