Align the patient decline checkboxes with the end of the text input

--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -66,6 +66,11 @@ label{
     .form-group{
         margin-bottom: 5px;
     }
+
+    .btn-checkbox{
+        float: right;
+    }
+
     margin-bottom: 10px;
 }
 
