Changes proposed treatment to a choices field of proposed treatment/completed treatment

--- a/odonto/templates/forms/orthodontic_data_set_form.html
+++ b/odonto/templates/forms/orthodontic_data_set_form.html
@@ -1,8 +1,8 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row content-offset-20">
-  <div class="col-md-3">
-    {% btn_checkbox field="OrthodonticDataSet.proposed" %}
+  <div class="col-md-12">
+    {% btn_radio field="OrthodonticDataSet.treatment_type" %}
   </div>
 </div>
 <div class="row content-offset-20">
