--- a/odonto/templates/records/orthodontic_data_set.html
+++ b/odonto/templates/records/orthodontic_data_set.html
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="col-md-6">
     <table class="table table-striped">
+      {% table_row_field_display "OrthodonticDataSet.treatment_type" %}
       {% table_row_field_display "OrthodonticDataSet.radiograph" %}
       {% table_row_field_display "OrthodonticDataSet.removable_upper_appliance" %}
       {% table_row_field_display "OrthodonticDataSet.removable_lower_appliance" %}
