--- a/odonto/templates/templatetags/subrecord_row.html
+++ b/odonto/templates/templatetags/subrecord_row.html
@@ -1,7 +1,7 @@
 {% load odonto_subrecords %}
 <div class="row content-offset-20">
   <div class="col-md-12">
-    <h2>{{ title }}</h2>
+    <h2>{{ model.get_display_name }}</h2>
     <span ng-repeat="item in {{ object_list }}">
       {% include model.get_display_template %}
     </span>
