--- a/odonto/templates/forms/orthodontic_data_set_form.html
+++ b/odonto/templates/forms/orthodontic_data_set_form.html
@@ -1,6 +1,11 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row content-offset-20">
+  <div class="col-md-12">
+    {% btn_radio field="OrthodonticDataSet.treatment_type" %}
+  </div>
+</div>
+<div class="row content-offset-20">
   <div class="col-md-3">
     {% input field="OrthodonticDataSet.radiograph" style="vertical" %}
   </div>
